--- a/app/views/videos/video_gallery.html.erb
+++ b/app/views/videos/video_gallery.html.erb
@@ -28,6 +28,9 @@
 
 <br />
 
-<% if session[:current_user] %>
-<%= link_to 'New Video', new_video_path %>
+<% if signed_in?%>
+    <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "photographer" } %>
+       <%= link_to 'New Video', new_video_path %>
+    <% end %>
 <% end %>
+
