updated members sidebar

--- a/app/views/sidebars/_members.html.erb
+++ b/app/views/sidebars/_members.html.erb
@@ -11,8 +11,8 @@
 </ul>
 <p>Coming Soon?</p>
 <ul>
-  <li>Event Sign-up</li>
-  <li>Documents</li>
+  <li>Input / track your volunteer hours</li>
+  <li>CAF Documents</li>
 </ul>
 <!-- Close right-column-box -->
 </div>
