added links to members list for Admin, SuperUser editing

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @member %> |
-<%= link_to 'Back', members_path %>
+<%= link_to 'Back', members_list_path %>
