--- a/app/views/pages/squadron.html.erb
+++ b/app/views/pages/squadron.html.erb
@@ -39,16 +39,16 @@ Georgetown, TX 78628</p>
         <th>Officer</th>
     </tr>
     <tr> 
-        <td class="white_row">Squadron Leader</td>
+        <td class="white_row">Unit Leader</td>
         <td class="white_row">Gregg Peterson</td>
     </tr>
     <tr> 
         <td class="yellow_row">Executive Officer</td>
-        <td class="yellow_row">Jim Ivanoff</td>
+        <td class="yellow_row">Kevin Reick</td>
     </tr>
     <tr> 
         <td class="white_row">Finance Officer</td>
-        <td class="white_row">Jim Connors / Beth Jenkins</td>
+        <td class="white_row">Kevin Reick / Beth Jenkins</td>
     </tr>
     <tr> 
         <td class="yellow_row">Adjutant</td>
@@ -60,11 +60,11 @@ Georgetown, TX 78628</p>
     </tr>
     <tr> 
         <td class="yellow_row">Maintenance Officer</td>
-        <td class="yellow_row">Mark Frederick</td>
+        <td class="yellow_row">Ira Menin</td>
     </tr>
     <tr> 
         <td class="white_row">Safety Officer</td>
-        <td class="white_row">Dennis Gauthier</td>
+        <td class="white_row">Daryl Dressler</td>
     </tr>
     <tr> 
         <td class="yellow_row">Web Master</td>
