added *tease* rule to events index to only show next four of each type of event

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -17,7 +17,7 @@
   <tr>
     <td colspan="2"><strong><em><%= event_type.title %></em></strong></td>
   </tr>
-<% event_type.events.published.ordered.each do |event| %>
+<% event_type.events.published.ordered.tease.each do |event| %>
   <tr class="<%= cycle('odd_row', 'even_row') %>">
     <td><%= event.start.strftime("%b %d, %Y") %></td>
     <td><%= link_to event.title, event %></td>
