updates to map2013

--- a/app/views/layouts/map_2013.html.erb
+++ b/app/views/layouts/map_2013.html.erb
@@ -43,6 +43,26 @@
 	GEvent.addListener(marker5, 'click', function() { marker5.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Hondo Air Field Fly-In</strong><br />Hondo, TX</div></div>"); });
 	map.addOverlay(marker5);
 
+	var marker6 = new GMarker(new GLatLng(40.4459444,-95.3673056));
+	GEvent.addListener(marker6, 'click', function() { marker6.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Tarkio Flying Wingnuts</strong><br />Tarkio, MO</div></div>"); });
+	map.addOverlay(marker6);
+
+	var marker7 = new GMarker(new GLatLng(31.9425278,-102.2019167));
+	GEvent.addListener(marker7, 'click', function() { marker7.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Memorial Day at CAF HQ</strong><br />Midland, TX</div></div>"); });
+	map.addOverlay(marker7);
+
+	var marker8 = new GMarker(new GLatLng(43.995821,-88.551082));
+	GEvent.addListener(marker8, 'click', function() { marker8.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>EAA Airventure</strong><br />Oshkosh, WI</div></div>"); });
+	map.addOverlay(marker8);
+
+	var marker9 = new GMarker(new GLatLng(32.218891,-96.079217));
+	GEvent.addListener(marker9, 'click', function() { marker9.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>Thunder Over Cedar Creek</strong><br />Cedar Creek Resevoir, TX</div></div>"); });
+	map.addOverlay(marker9);
+
+	var marker10 = new GMarker(new GLatLng(27.9130278,-97.2115000));
+	GEvent.addListener(marker10, 'click', function() { marker10.openInfoWindowHtml("<div style='width: 205px; height: 55;'><div style='width: 205px; height: 55px;'><strong>San Patricio County Fly-In</strong><br />Ingleside, TX</div></div>"); });
+	map.addOverlay(marker10);
+
 	
       }
     }
