changed Phil Clark to Adjutant from Jim Connors

--- a/app/views/pages/squadron.html.erb
+++ b/app/views/pages/squadron.html.erb
@@ -52,7 +52,7 @@ Georgetown, TX 78628</p>
     </tr>
     <tr> 
         <td class="yellow_row">Adjutant</td>
-        <td class="yellow_row">Jim Connors</td>
+        <td class="yellow_row">Phil Clark</td>
     </tr>
     <tr> 
         <td class="white_row">Operations Officer</td>
