changed unit leader

--- a/app/views/pages/squadron.html.erb
+++ b/app/views/pages/squadron.html.erb
@@ -40,7 +40,7 @@ Georgetown, TX 78628</p>
     </tr>
     <tr> 
         <td class="white_row">Unit Leader</td>
-        <td class="white_row">Gregg Peterson</td>
+        <td class="white_row">Mark Frederick</td>
     </tr>
     <tr> 
         <td class="yellow_row">Executive Officer</td>
