--- a/app/views/event_signups/_form.html.erb
+++ b/app/views/event_signups/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :event %><br />
-    <%= f.text_field :event %>
+    <%= f.label :event_id %><br />
+    <%= f.text_field :event_id %>
   </div>
   <div class="field">
-    <%= f.label :member %><br />
-    <%= f.text_field :member %>
+    <%= f.label :member_id %><br />
+    <%= f.text_field :member_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
