--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,10 +2,6 @@
   <%= render "sidebars/newsletter_signup" %>
 <% end %>
 
-<% if notice %>
-<p id="notice"><%= notice %></p>
-<% end %>
-
 <div id="calendar">
   <div id="calendar_year">
     <%= @event.start.strftime("%Y") %>
@@ -67,3 +63,37 @@
       <%= link_to 'Edit', edit_event_path(@event) %> | <%= link_to 'Back', events_path %>
     <% end %>
 <% end %>
+
+
+<br />
+
+<% if current_user %>
+
+<p>Put me on the List for this airshow</p>
+  <% if current_user.roles.any? {|role| role.name == "superuser" or role.name == "member"} %>
+    <div class="signup_buttons">
+      <%= button_to 'Definite', event_signups_path(:member_id => current_user.member, :event_id => @event.id, :commitment_level => "Definite") %>
+      <%= button_to 'Maybe', event_signups_path(:member_id => current_user.member, :event_id => @event.id, :commitment_level => 'Maybe') %>
+    </div>
+  <% end %>
+
+
+
+<table width="500" class="table_border">
+  <tr>
+    <th>Name</th>
+    <th>Commitment</th>
+    <th>Sign-up Date</th>
+  </tr>
+
+<% @event.event_signups.ordered.each do |event_signup| %>
+  <tr class="<%= cycle('odd_row', 'even_row') %>">
+    <td><%= event_signup.member.last_name %>, <%= event_signup.member.first_name %></td>
+    <td><%= event_signup.commitment_level %></td>
+    <td><%= event_signup.created_at.strftime("%b %d, %Y %H:%M %p") %></td>
+  </tr>
+<% end %>
+</table>
+<% end %>
+
+<br /><br />
