--- a/app/views/event_signups/index.html.erb
+++ b/app/views/event_signups/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing event_signups</h1>
+<h1>Airshow Signups</h1>
 
 <table>
   <tr>
@@ -9,7 +9,7 @@
     <th></th>
   </tr>
 
-<% @event_signups.each do |event_signup| %>
+<% @event_signups.events.uniq.title.each do |event_signup| %>
   <tr>
     <td><%= event_signup.event.title %></td>
     <td><%= event_signup.member.last_name %></td>
