updates to render images through asset pipeline

--- a/app/views/pages/VMB612.html.erb
+++ b/app/views/pages/VMB612.html.erb
@@ -6,7 +6,7 @@
 
 <table width="150" hspace="10" border="0" align="right" cellpadding="1" cellspacing="1" class="table2">
     <tr> 
-        <td><img src="/images/vmb612_3.jpg" width="126" height="102" border="1" /></td>
+        <td><img src="/assets/vmb612_3.jpg" width="126" height="102" border="1" /></td>
     </tr>
     <tr> 
         <td><div align="center" class="caption_text">The No 3 ship of VMB-612 - the plane Devil Dog memorializes.<br><i>photo courtesy of George Savini</i></div></td>
@@ -21,7 +21,7 @@
 
 <table width="200" hspace="10" border="0" align="left" cellpadding="1" cellspacing="1" class="table2">
     <tr> 
-        <td><img src="/images/tinytim1.jpg" width="194" height="148" border="1" /></td>
+        <td><img src="/assets/tinytim1.jpg" width="194" height="148" border="1" /></td>
     </tr>
     <tr> 
         <td><div align="center" class="caption_text">VMB 612 with TinyTim rocket<br><i>photo courtesy of NARA</i></div></td>
