--- a/app/views/pages/_hp_feed_the_dog.html.erb
+++ b/app/views/pages/_hp_feed_the_dog.html.erb
@@ -7,7 +7,7 @@
 <div class="ftd_row">
   <div class="ftd_left_cell">
     <div align="center">
-    <img src="images/dog_bowl.jpg" width="151" height="93" />
+    <%= image_tag('dog_bowl.jpg',  :border => 'none') %>
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
       <input type="hidden" name="cmd" value="_s-xclick">
       <input type="hidden" name="hosted_button_id" value="DFVG4GSRFQUKN">
