--- a/app/assets/stylesheets/web_style.css
+++ b/app/assets/stylesheets/web_style.css
@@ -98,7 +98,7 @@ body {
 	margin-right: 4px; /*margin between top nav boxes - my code*/
 	margin-left: 4px; /*margin between top nav boxes - my code*/
 	padding-bottom: 4px; /*padding to display bottom of buttons - tweak to avoid gap*/
-	background: url('../images/nav_button_1_black_0.gif') no-repeat top left; /*hover styles - my code */
+	background: url('/assets/nav_button_1_black_0.gif') no-repeat top left; /*hover styles - my code */
 }
 
 /* SECOND LEVEL CODE */
@@ -119,7 +119,7 @@ body {
 	margin-top: -1px;
 	padding-bottom: 10px;
 	padding-left: 24px; /* pads text within boxes */
-	background: #b78d03 url('../images/nav_button_1_black_0.gif') no-repeat top center; /*hover styles - my code */
+	background: #b78d03 url('/assets/nav_button_1_black_0.gif') no-repeat top center; /*hover styles - my code */
 	border-left: 1px solid #666;
 	border-right: 1px solid #666;
 	border-bottom: 1px solid #666;
@@ -133,12 +133,12 @@ body {
 	left: auto;
 }
 #nav li:hover, #nav li.sfhover {/* hover styles - my code */
-	background: #b78d03 url('../images/nav_button_1_black_1.gif') no-repeat top left;
+	background: #b78d03 url('/assets/nav_button_1_black_1.gif') no-repeat top left;
 
 }
 
 #nav li ul li:hover, #nav li ul li.sfhover {/* hover styles - my code */
-	background: #b78d03 url('../images/nav_button_1_black_1.gif') no-repeat top center;
+	background: #b78d03 url('/assets/nav_button_1_black_1.gif') no-repeat top center;
 }
 
 
@@ -166,7 +166,7 @@ div.clearer {
         float: left;
         width: 840px;
         margin: 70px 0 20px 30px;
-        background: #fff url("../images/planform_sidebar.gif") repeat-y top right;
+        background: #fff url("/assets/planform_sidebar.gif") repeat-y top right;
         border: 1px solid #000;
         font-family: Verdana, Helvetica, sans-serif;
         font-size: 12px;
@@ -218,7 +218,7 @@ div.clearer {
         font-family: Verdana, Helvetica, sans-serif;
         font-size: 12px;
         color: #333333;
-        /*background:  url("../images/planform_sidebar.gif") repeat-y top left;
+        /*background:  url("/assets/planform_sidebar.gif") repeat-y top left;
         /*border: 1px solid #cadbeb;*/
         }
 
@@ -231,7 +231,7 @@ div.clearer {
         }
 
 .right-column-box h1 {
-        background:  url("../images/home_page_box_hdr.png") no-repeat top left;
+        background:  url("/assets/home_page_box_hdr.png") no-repeat top left;
         height: 24px;
         margin: 0 auto;
         padding: 0px 0px 0px 4px;
@@ -278,7 +278,7 @@ div.clearer {
         }
 
 .row-container h1 {
-        background:  url("../images/home_page_box_hdr.png") no-repeat top left;
+        background:  url("/assets/home_page_box_hdr.png") no-repeat top left;
         height: 24px;
         margin: 0 auto;
         padding: 0px 0px 0px 4px;
@@ -631,7 +631,7 @@ img.fr {
   float: right;
   width: 97px;
   height: 97px;
-  background:  url("../images/calendar_graphic.jpg") no-repeat top left;
+  background:  url("/assets/calendar_graphic.jpg") no-repeat top left;
   }
 
 #calendar_month {
