--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,11 +2,9 @@
 <html>
 <head>
   <title>Devil Dog Squadron :: </title>
-  <%= stylesheet_link_tag 'web_style' %>
-  <%= javascript_include_tag 'application' %>
-  <%= javascript_include_tag "prototype" %>
-  <%= javascript_include_tag "rails" %>
-  <%#= csrf_meta_tags %>
+  <%= stylesheet_link_tag    "application" %>
+  <%= javascript_include_tag "application" %>
+  <%= csrf_meta_tags %>
 </head>
 <body>
 
