--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -2,10 +2,9 @@
 <html>
 <head>
   <title>Devil Dog Squadron :: </title>
-  <%#= stylesheet_link_tag    "application" %>
-  <%= stylesheet_link_tag 'web_style' %>
+  <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
-  <%#= csrf_meta_tags %>
+  <%= csrf_meta_tags %>
 </head>
 <body>
 
