--- a/app/views/layouts/map_2013.html.erb
+++ b/app/views/layouts/map_2013.html.erb
@@ -2,10 +2,9 @@
 <html>
 <head>
   <title>Devil Dog Squadron :: </title>
-  <%#= stylesheet_link_tag    "application" %>
-  <%= stylesheet_link_tag 'web_style' %>
+  <%= stylesheet_link_tag    "application" %>
   <%= javascript_include_tag "application" %>
-  <%#= csrf_meta_tags %>
+  <%= csrf_meta_tags %>
 
 
     <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyA2CUo-V9LEi2YuJvh6F_Sf7NkmpXnC4yE"
