--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,3 +1,30 @@
+<script>
+jQuery(function($){
+
+   $('#member_home_phone').mask("(999) 999-9999",{placeholder:" "});
+   $('#member_work_phone').mask("(999) 999-9999? x99999");
+   $('#member_cell_phone').mask("(999) 999-9999");
+
+   $('#member_user_attributes_email').blur(function() {
+
+   $('#member_user_attributes_username').val($(this).val());
+
+});
+
+});
+</script>
+
+  <script>
+  $(function() {
+    $( "#member_dd_dues_date" ).datepicker({
+      changeMonth: true,
+      changeYear: true,
+      dateFormat: "yy-mm-dd"
+    });
+  });
+  </script>
+
+
 <h1>New member</h1>
 
 <%= render 'form' %>
