--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,6 +48,9 @@
             <li><%= link_to "Account/Profile", account_path(User.find(current_user).member.id) %></li>
             <li><%= link_to 'Password', edit_user_registration_path %></li>
             <li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
+          <% if current_user.roles.any? {|role| role.name == "superuser" } %>
+            <li><%= link_to "What's Hot", teasers_path %></li>
+          <% end %>
           </ul>
         <% end %></li>
 </ul>
