adding fields for assigning roles

--- a/app/views/members/_account_form.html.erb
+++ b/app/views/members/_account_form.html.erb
@@ -100,7 +100,7 @@
   
 <div class="clearer"></div>
 
-  <div class="actions">
-    <%= f.submit %>
+<div class="actions" style="margin: 0 20em;">
+    <%= submit_tag  "Update Account", :name => "Update Account" %>
   </div>
 <% end %>
