added instruction is if reset email fails

--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -9,4 +9,7 @@
   <div><%= f.submit "Send me reset password instructions" %></div>
 <% end %>
 
+<p>Requesting to reset your password will generate an email with instructions on how to reset your password.</p>
+
+<p>If you get an email not found error send an email to <a href="mailto:webmaster@devildogsquadron.com">webmaster@devildogsquadron.com</a> to request your address be added/updated.</p>
 <%#= render "devise/shared/links" %>
