--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -27,16 +27,20 @@
 <div class="indent_row">
   <div class="cell">
   <div class="field">
-    <%= f.label :event_types_id %><br />
+    <%= f.label :event_types_id, "Event Type" %><br />
     <%= f.collection_select :event_type_id, EventType.all, :id, :title, :order => 'title ASC', :prompt => true %>
   </div>
   <div class="field">
+    <%= f.label :event_statuses_id, "Status" %><br />
+    <%= f.collection_select :event_statuses_id, EventStatus.all, :id, :status, :order => 'status ASC', :prompt => true %>
+  </div>
+  <div class="field">
     <%= f.label :title, "Event Name" %><br />
-    <%= f.text_field :title %>
+    <%= f.text_field :title, :size => "25" %>
   </div>
   <div class="field">
     <%= f.label :entered_by %><br />
-    <%= f.text_field :entered_by %>
+    <%= f.text_field :entered_by, :size => "25"  %>
   </div>
   </div>
   <div class="cell">
@@ -48,17 +52,17 @@
 
   <div class="field">
     <%= f.label :contact_info %><br />
-    <%= f.text_field :contact_info %>
+    <%= f.text_field :contact_info, :size => "25"  %>
   </div>
   <div class="field">
     <%= f.label :URL, "Event Website URL" %><br />
-    <%= f.text_field :URL %>
+    <%= f.text_field :URL, :size => "25"  %>
   </div>
   </div>
   <div class="cell">
     <div class="field">
     <%= f.label :graphic_address, "Graphic Filename" %><br />
-    <%= f.text_field :graphic_address %>
+    <%= f.text_field :graphic_address, :size => "25" %>
   </div>
   </div>
 </div>
