added datetime picker to events forms

--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New location</h1>
 
+<p>Look up airport details at <%= link_to 'Airnav', "http://www.airnav.com/airports/", :target => "_blank" %>.</p>
+
 <%= render 'form' %>
 
 <%= link_to 'Back', locations_path %>
