--- a/app/assets/stylesheets/web_style.css
+++ b/app/assets/stylesheets/web_style.css
@@ -711,3 +711,19 @@ img.fr {
     display: inline;
 }
 
+input, textarea {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 1.5em;
+  padding: 0.25em 0.5em;
+  background: #e2ecee;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  }
+.styled-select {
+  background: #e2ecee;
+  border: 1px solid #ccc;
+  font-size: 1.25em;
+  padding: 0.1em 0.5em;
+   }
