--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,3 +1,17 @@
+  <script>
+  $(function() {
+    $( "#event_start" ).datetimepicker({
+     format:'Y-m-d H:i:00',
+     step:15
+    });
+
+    $( "#event_end" ).datetimepicker({
+     format:'Y-m-d H:i:00',
+     step:15
+    });
+  });
+  </script>
+  
 <%= form_for(@event) do |f| %>
   <% if @event.errors.any? %>
     <div id="error_explanation">
@@ -13,46 +27,58 @@
 
 <div class="indent_row">
   <div class="cell">
-  <div class="field">
-    <%= f.label :start %><br />
-    <%= f.datetime_select :start %>
+    <div class="field">
+      <%= f.label :start %><br />
+      <%= f.text_field :start, :value => f.object.try(:start).try(:strftime,'%Y-%m-%d %H:%M:%S'), :size => 20 %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :end %><br />
-    <%= f.datetime_select :end %>
+  <div class="cell">
+    <div class="field">
+      <%= f.label :end %><br />
+      <%= f.text_field :end, :value => f.object.try(:end).try(:strftime,'%Y-%m-%d %H:%M:%S'), :size => 20 %>
+    </div>
   </div>
+</div>
+
+
+<div class="indent_row" style="width: 560px;">
+  <div class="cell">
+    <div class="field">
+      <%= f.label :event_types_id, "Event Type" %><br />
+      <%= f.collection_select :event_type_id, EventType.all, :id, :title, options = {:order => 'title ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
+    </div>
+  </div>
+  <div class="cell">
+    <div class="field">
+      <%= f.label :event_statuses_id, "Status" %><br />
+      <%= f.collection_select :event_statuses_id, EventStatus.all, :id, :status, options = {:order => 'status ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
+    </div>
+  </div>
+  <div class="cell">
+    <div class="field">
+      <%= f.label :location %><br />
+      <%= f.collection_select :location_id, Location.ordered.all, :id, :short_name, options = {:order => 'short_name ASC', :prompt => true}, html_options = {:class => "styled-select"} %><br /><p><%= link_to 'Enter a new location', new_location_path %></p><br />
+    </div>
   </div>
 </div>
 
 <div class="indent_row">
-  <div class="cell">
-  <div class="field">
-    <%= f.label :event_types_id, "Event Type" %><br />
-    <%= f.collection_select :event_type_id, EventType.all, :id, :title, :order => 'title ASC', :prompt => true %>
-  </div>
-  <div class="field">
-    <%= f.label :event_statuses_id, "Status" %><br />
-    <%= f.collection_select :event_statuses_id, EventStatus.all, :id, :status, :order => 'status ASC', :prompt => true %>
-  </div>
   <div class="field">
     <%= f.label :title, "Event Name" %><br />
-    <%= f.text_field :title, :size => "25" %>
+    <%= f.text_field :title, :size => "20" %>
   </div>
   <div class="field">
     <%= f.label :entered_by %><br />
-    <%= f.text_field :entered_by, :size => "25"  %>
+    <%= f.text_field :entered_by, :size => "20"  %>
   </div>
   </div>
   <div class="cell">
 
-  <div class="field">
-    <%= f.label :location %><br />
-    <%= f.collection_select :location_id, Location.all, :id, :short_name, :order => 'short_name ASC', :prompt => true %>
-  </div>
+
 
   <div class="field">
     <%= f.label :contact_info %><br />
-    <%= f.text_field :contact_info, :size => "25"  %>
+    <%= f.text_field :contact_info, :size => "20"  %>
   </div>
   <div class="field">
     <%= f.label :URL, "Event Website URL" %><br />
@@ -62,7 +88,7 @@
   <div class="cell">
     <div class="field">
     <%= f.label :graphic_address, "Graphic Filename" %><br />
-    <%= f.text_field :graphic_address, :size => "25" %>
+    <%= f.text_field :graphic_address, :size => "20" %>
   </div>
   </div>
 </div>
@@ -72,10 +98,12 @@
   <div class="cell">
   <div class="field">
     <%= f.label :details %><br />
-    <%= f.text_area :details, :rows => 5, :cols => 65 %>
+    <%= f.text_area :details, :size => "50x5" %>
   </div>
   </div>
 </div>
+<div class="clearer"></div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
