--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -11,41 +11,66 @@
     </div>
   <% end %>
 
-<p>Look up airport details at <%= link_to 'Airnav', "http://www.airnav.com/airports/", :target => "_blank" %>.</p>
 
-  <div class="field">
-    <%= f.label :short_name %> (shows in drop-down)<br />
-    <%= f.text_field :short_name %>
+<div class="indent_row">
+  <div class="cell">
+    <div class="field">
+      <%= f.label :short_name %> (shows in drop-down)<br />
+      <%= f.text_field :short_name, :size => 20 %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :airport_name %><br />
-    <%= f.text_field :airport_name %>
+  <div class="cell">
+    <div class="field">
+      <%= f.label :airport_name %><br />
+      <%= f.text_field :airport_name, :size => 25 %>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :icao_identifier, 'Airport Identifier (ICAO)' %><br />
-    <%= f.text_field :icao_identifier %>
+</div>
+
+<div class="indent_row">
+  <div class="cell">
+    <div class="field">
+      <%= f.label :icao_identifier, 'ICAO Identifier' %><br />
+      <%= f.text_field :icao_identifier, :size => 10 %>
+    </div>
   </div>
+  <div class="cell">
+    <div class="field">
+      <%= f.label :city %><br />
+      <%= f.text_field :city, :size => 10 %>
+    </div>
+    </div>
+  <div class="cell">
+    <div class="field">
+      <%= f.label :state %><br />
+      <%= f.text_field :state, :size => 10 %>
+    </div>
+  </div>
+</div>
+
+<div class="indent_row">
+  <div class="cell">
+    <div class="field">
+      <%= f.label :latitude %><br />
+      <%= f.text_field :latitude, :size => 20 %>
+    </div>
+  </div>
+  <div class="cell">
+    <div class="field">
+      <%= f.label :longitude %><br />
+      <%= f.text_field :longitude, :size => 20 %>
+    </div>
+  </div>
+</div>
+
+<div class="indent_row">
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.text_area :description %>
+    <%= f.text_area :description, :size => "50x5" %>
   </div>
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city %>
-  </div>
-  <div class="field">
-    <%= f.label :state %><br />
-    <%= f.text_field :state %>
-  </div>
-  <div class="field">
-    <%= f.label :latitude %><br />
-    <%= f.text_field :latitude %>
-  </div>
-  <div class="field">
-    <%= f.label :longitude %><br />
-    <%= f.text_field :longitude %>
-  </div>
-  <div class="actions">
+</div>
+<div class="clearer"></div>
+  <div class="actions" style="text-align: center;">
     <%= f.submit %>
   </div>
 <% end %>
