--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,9 +15,8 @@
 
 
     <li><%= link_to 'Home', "/" %></li>
-    <li><%= link_to "News & Events", news_index_path %>
+    <li><%= link_to "Calendar", calendar_path %>
         <ul>
-        <li><%= link_to "Calendar", calendar_path %></li>
         <li><%= link_to "News Items", news_index_path %></li>
         </ul>
     </li>
