--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,10 @@
 <% current_event_type = "" %>
+<% airshows = "" %>
+<% if signed_in? %>
+  <% airshows = @air_shows_members %>
+<% else %>
+  <% airshows = @air_shows_public %>
+<% end %>
 
 <% content_for :sidebar do %>
   <%= render "sidebars/newsletter_signup" %>
@@ -28,7 +34,7 @@
 <% current_event_type = event.event_type.title %>
 <% end %>
 
-<% @air_shows.each do |event| %>
+<% airshows.each do |event| %>
 <% if current_event_type != event.event_type.title %>
   <tr>
     <td colspan="2"><strong><em><%= event.event_type.title %></em></strong></td>
@@ -36,7 +42,7 @@
 <% end %>
   <tr class="<%= cycle('odd_row', 'even_row') %>">
     <td><%= event.start.strftime("%b %d, %Y") %></td>
-    <td><%= link_to event.title, event %></td>
+    <td><%= link_to event.title, event %><% if event.event_statuses_id == 2 %> <span class="error" style="display: inline;"><strong>--Tentative</strong></span> <% end %></td>
   </tr>
 <% current_event_type = event.event_type.title %>
 <% end %>
