--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -137,6 +137,6 @@
 <div class="clearer"></div>
 
   <div class="actions" style="text-align: center;">
-    <%= submit_tag  "Update Member", :name => "Update Member" %>
+    <%= f.submit %>
   </div>
 <% end %>
