updates to models for events

--- a/app/views/event_signups/_form.html.erb
+++ b/app/views/event_signups/_form.html.erb
@@ -21,7 +21,7 @@
   <div class="cell">
     <div class="field">
       <%= f.label :member_id, "Member" %><br />
-      <%= f.collection_select :member_id, Member.all, :id, :full_name, options = {:order => 'full_name ASC', :prompt => true}, html_options = {:class => "styled-select"} %>
+      <%= f.collection_select :member_id, Member.ordered.all, :id, :full_name, options = {:prompt => true}, html_options = {:class => "styled-select"} %>
     </div>
   </div>
 </div>
