--- a/app/views/sidebars/_members.html.erb
+++ b/app/views/sidebars/_members.html.erb
@@ -2,17 +2,13 @@
 
 <h1>Members Pages</h1>
 
-<p>Active</p>
 <ul>
   <li><%= link_to "Bulletin Board", posts_path %></li>
+  <li><%= link_to "Documents", squadron_documents_path %></li>
   <li><%= link_to "Membership", members_list_path %></li>
-  <li><%= link_to "Account/Profile", account_path(@user.member.id) %></li>
+  <li><%= link_to "Account/Profile", account_path(current_user.member.id) %></li>
   <li><%= link_to 'Password', edit_user_registration_path %></li>
 </ul>
-<p>Coming Soon?</p>
-<ul>
-  <li>Input / track your volunteer hours</li>
-  <li>CAF Documents</li>
-</ul>
+
 <!-- Close right-column-box -->
 </div>
