--- a/app/views/sidebars/_newsletter_signup.html.erb
+++ b/app/views/sidebars/_newsletter_signup.html.erb
@@ -11,11 +11,11 @@
 <%= f.hidden_field :source, :value => 'web' %>
  
 <p><%= f.label :address, "Email Address" %>:</p>
-<div align="center"><%= f.text_field :address, :size => '20' %>
+<div align="center"><%= f.text_field :address, :size => '15' %>
 <br />
 <br />
 
-<%= f.submit "add me to the list" %></div>
+<%= f.submit "subscribe" %></div>
 <br />
 <% end %>
 
